--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,13 +3,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Landing-Page</h2>
-              <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-                <br/>
+              <h2>About USC Computer Services</h2>
+              <div class="lead">{{ post.content }}
+                <p>We are a group of computer engineers helping businesses<br/>to accelerate the creation of world-class software and technology solutions.</p>
+                <p>We envision a company led by smart, self-motivated,<br/>multi-national people doing what they enjoy.</p>
+                <p>We empower our clients with technology.</p>
               </div>
+            </div>
         </div>
     </section>
